<resources>
    <string name="app_name">Kazi</string>
    <string name="desc">Find your dream job is now much \neasier and faster like never before</string>
    <string name="title">Find a perfect \njob match</string>
    <string name="txtHolder">Find your perfect job </string>
    <string name="text_hello">Hello John Doe</string>
    <string name="txt_place_holder">What are you looking for?</string>
    <string name="popular_jobs">All Jobs</string>
    <string name="txt_company_name">Google</string>
    <string name="txt_qualif">Qualifications :</string>
    <string name="qualification1">Bachelor\'s degree or equivalent practical experience</string>
    <string name="job_desc">About the job :</string>
    <string name="job_about_desc">As a product team, we believe in a collaborative working style with a bias towards rapid prototyping, experimentation and a strong curiosity for our customers and their needs.</string>
    <string name="job">Apply for job</string>
    <string name="app">Applications</string>
    <string name="your_applications">Your Applications</string>
    <string name="search">Search</string>
    <string name="_32">32</string>
    <string name="job_opportunity">Job Opportunity</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="applications">Applications</string>
    <string name="settings">Settings</string>
    <string name="txt_placeholder">John Doe</string>
    <string name="job_title">UI/UX Designer</string>
    <string name="projects">Projects</string>
    <string name="completed">Completed</string>
    <string name="experiences">Experiences</string>
    <string name="skills">Skills</string>
    <string name="product_designer">Product Designer</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="company">Company</string>
    <string name="recruiter">Recruiter</string>
    <string name="job_seeker">Job Seeker</string>
    <string name="applicants">Applicants</string>
    <string name="hired">Hired</string>
    <string name="lead_product_designer">Lead Product Designer</string>
    <string name="amount">$200</string>
    <string name="location">Nairobi Kenya</string>
    <string name="enter_job_title">Enter Job title</string>
    <string name="company_name">Enter Employer Name</string>
    <string name="job_description">Employer Phone</string>
    <string name="enter_job_location">Enter Job Location</string>
    <string name="enter_job_role">Enter job salary</string>
    <string name="post_job">Post Job</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="login_here">Login Here</string>
    <string name="available_users">Available Users</string>
    <string name="gardener">Gardener</string>
    <string name="hire">Hire Me</string>
    <string name="my_jobs">My Jobs</string>
    <string name="myjobs">MyJobs</string>
    <string name="user_ratings">User Ratings</string>
    <string name="user_location">Location</string>
    <string name="nyeri">Nyeri</string>
    <string name="john_doe">John Doe</string>
    <string name="flower_gardener">Flower Gardener</string>
    <string name="years_old">Years Old</string>
    <string name="jobtitle">Job Title</string>
    <string name="active_applications">Job Salary</string>
    <string name="_2_active">Ksh 5000</string>
    <string name="contact">Contact :</string>
    <string name="no">0725632415</string>
    <string name="job_pay">Job Pay</string>
    <string name="order_number">Order Number :</string>
    <string name="s">Status</string>
    <string name="finish">Complete Task</string>
    <string name="rate_here">Rate Here:</string>
    <string name="rate">Rate</string>
    <string name="worker_profiles">Worker Profiles</string>
    <string name="admin_login">Admin Login</string>
    <string name="admin_home_page">Admin Home Page</string>
    <string name="pending_jobs">Pending Jobs</string>
    <string name="approved_jobs">Approved Jobs</string>
    <string name="unpaid_jobs">UnPaid Jobs</string>
    <string name="paid_jobs">Paid Jobs</string>
    <string name="inactive_jobs">Jobs</string>
    <string name="active_jobs">Applications</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment">Payment :</string>
    <string name="job_applications">Job Applications</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="unpaid">Unpaid jobs</string>
    <string name="paid">Paid Jobs</string>
    <string name="dashboard">DashBoard</string>
    <string name="earnings">Earnings</string>
    <string name="jobs">Jobs</string>
    <string name="available_jobs">Available Jobs</string>
</resources>