<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circularbordersolid"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo_image"
            android:layout_width="150dp"
            android:layout_height="90dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/john_doe"
                android:textColor="#424242"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/skill_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsansboldregular"
                android:text="@string/flower_gardener"
                android:textSize="14sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular_grey_bordersolid"
                    android:padding="10dp"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/worker_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nyeri"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/user_location"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular_grey_bordersolid"
                    android:padding="10dp"
                    android:src="@drawable/star_on" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/rating_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.8/5"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/user_ratings"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="8dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/circular_grey_bordersolid"
                    android:padding="10dp"
                    android:src="@drawable/ic_age_limit" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/worker_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/years_old"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="5dp">

                <Button
                    android:id="@+id/btn_hire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"

                    android:background="@drawable/shape_button"
                    android:fontFamily="@font/dmsansbold"
                    android:text="@string/hire"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>


