<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PostJobActivity">

    <RelativeLayout
        android:id="@+id/image_bg"
        android:layout_width="match_parent"
        android:background="@drawable/profile_background"
        android:layout_height="150dp"/>


    <RelativeLayout
        android:id="@+id/layout_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/image_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/details_background"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="Post A Job"/>

        <ImageView
            android:id="@+id/image_share"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:background="@drawable/details_background"
            android:scaleType="centerInside"
            android:src="@drawable/ic_share" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/image_bg"
        android:orientation="vertical">


            <EditText
                android:id="@+id/job_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/details_background"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/dmsansbold"
                android:hint="@string/enter_job_title"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/job_EmployerName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/details_background"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/dmsansbold"
                android:hint="@string/company_name"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/employerPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/details_background"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/dmsansbold"
                android:hint="@string/job_description"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Job_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/details_background"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/dmsansbold"
                android:hint="@string/enter_job_location"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/job_salary"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/details_background"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:drawableRight="@drawable/ic_baseline_person_24"
                android:fontFamily="@font/dmsansbold"
                android:hint="@string/enter_job_role"
                android:paddingStart="20dp"
                android:paddingLeft="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_Post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_button"
        android:text="@string/post_job"
        android:textColor="@android:color/white" />


</RelativeLayout>