<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:background="@drawable/job_background"
    android:orientation="vertical"
    android:layout_marginRight="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_background"
            android:scaleType="centerCrop"
            android:src="@drawable/log" />

        <com.like.LikeButton
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="15dp"
            app:circle_start_color="@color/colorAccent"
            app:icon_size="15dp"
            app:icon_type="heart"
            app:is_enabled="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/companyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsansboldregular"
            android:text="@string/txt_company_name"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/jobName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/dmsansbold"
            android:text="@string/lead_product_designer"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/job_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/amount"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="20dp"
                android:layout_height="5dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@+id/job_salary"
                android:layout_toRightOf="@+id/job_salary"
                android:background="@android:color/white" />

            <TextView
                android:id="@+id/job_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_toEndOf="@+id/divider"
                android:layout_toRightOf="@+id/divider"
                android:fontFamily="@font/dmsansbold"
                android:text="@string/location"
                android:textColor="@android:color/white"
                android:textSize="15sp" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>