<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SearchActivity">

    <RelativeLayout
        android:id="@+id/layout_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/details_background"
            android:scaleType="centerInside"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/dmsansboldregular"
            android:text="@string/search"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="normal"
            android:gravity="center_horizontal" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/layout_nav"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:inputType="text"
            android:textSize="15sp"
            android:layout_weight="2.5"
            android:background="@drawable/search_background"
            android:hint="@string/txt_place_holder"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/img_filter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:background="@drawable/filter_background"
            android:scaleType="centerInside"
            android:src="@drawable/ic_baseline_filter" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_below="@+id/layout_search"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_jobs_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dmsansboldregular"
            android:text="@string/_32"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/dmsansboldregular"
            android:text="@string/job_opportunity"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="normal"
            android:layout_marginLeft="20dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/txt_desc"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"/>

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            layout="@layout/search_item"/>



    </LinearLayout>



</RelativeLayout>